Added css styles to change buttons to blue

--- a/src/web/templates/layout.html
+++ b/src/web/templates/layout.html
@@ -11,6 +11,9 @@
   <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.colors.min.css">
+
+  <link rel="stylesheet" href="{% static 'style.css' %}"> <!-- CSS that changes buttons to blue -->
+  
   <script src="{% static 'htmx.v2.0.0.min.js' %}"></script>
   <title>QuickStatements 3.0</title>
   <style>
